@@ -1,0 +1,16 @@
+From: tester@testhost
+Newsgroups: test
+Date: Thu, 07 Mar 2002 10:05:22 GMT
+Subject: foo (5) testfile.txt (2/2)
+Message-ID: <1000.dumb@test>
+Lines: 9
+
+M%103$A$0#PX-#`L*"0@'!@4$`P(!``T*05-#24DZ(#`N+C(U-0T*``$"`P0%
+M!@<("0H+#`T.#Q`1$A,4%187&!D:&QP='A\@(2(C)"4F)R@I*BLL+2XO,#$R
+M,S0U-C<X.3H[/#T^/T!!0D-$149'2$E*2TQ-3D]045)35%565UA96EM<75Y?
+M8&%B8V1E9F=H:6IK;&UN;W!Q<G-T=79W>'EZ>WQ]?G^`@8*#A(6&AXB)BHN,
+MC8Z/D)&2DY25EI>8F9J;G)V>GZ"AHJ.DI::GJ*FJJZRMKJ^PL;*SM+6VM[BY
+MNKN\O;Z_P,'"P\3%QL?(R<K+S,W.S]#1TM/4U=;7V-G:V]S=WM_@X>+CY.7F
+LY^CIZNOL[>[O\/'R\_3U]O?X^?K[_/W^_PT*16YD(&]F(%1E<W1F:6QE#0H`
+`
+end
